# datapizza-async-project-test

./: .env.example  .env.ollama.example  .env.openai.example  .gitignore  README.md  config.yaml  docker-compose.dev.yml  docker-compose.openai.yml  docker-compose.test.yml  postman_collection.json  postman_environment.json
backend/: Dockerfile  Dockerfile.dev  Dockerfile.test  Dockerfile.worker  README.md  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 2837e0bdc452_add_summary_to_documents.py  3a27e6c2d27f_add_processing_cache_table.py  45f7c8dbd22b_add_summary_to_chats.py  46ccfbe1b629_add_response_metadata_to_messages.py  4cbce8ba6515_add_web_search_enabled_to_documents.py  69dcf36319a1_init_schema.py
backend/app/: main.py
backend/app/api/: auth.py  chats.py  documents.py  messages.py  profile.py  settings.py
backend/app/core/: config.py  logging.py  security.py
backend/app/models/: __init__.py  base.py  chat.py  document.py  fact.py  fact_check.py  flashcard.py  message.py  processing_cache.py  user.py  user_profile.py  user_settings.py
backend/app/schemas/: auth.py  chat.py
backend/app/services/: cache.py  cache_decorator.py  cleanup_manager.py  database.py  storage.py
backend/app/utils/: pagination.py
backend/app/worker/: README.md  celery_app.py  startup.py
backend/scripts/: migrate_chats_to_qdrant.py
backend/tests/: README.md  __init__.py  conftest.py  test_cache.py  test_processing_cache.py  test_web_verification_cache.py
backend/tests/test_api/: test_auth.py  test_chats.py  test_documents.py  test_health.py  test_messages.py
backend/tests/test_services/: test_config.py  (+2 more)
(+110 files in other folders)
